<resources>
    <string name="app_name">Koin Balance</string>
    <string name="default_name">User</string>
    <string name="default_currency">USD</string>


    <!-- Main Strings -->
    <string name="greet">Hello %s</string>
    <string name="your_balance_is">Your balance is:</string>
    <string name="balance">%s</string>
    <string name="transaction_value">%s</string>
    <string name="transaction_date">%s</string>

    <string name="configuration">Configuration</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="filter_transaction">Filter Transactions</string>
    <string name="date_format">MM/dd/yyyy</string>

    <!-- Filter Transaction Strings -->
    <string name="filter_dialog">Pick a month to filter</string>
    <string name="apply_filter">Apply filter</string>
    <string name="cancel_filter">Cancel filter</string>

    <!-- Configuration Strings -->
    <string name="username_field">User name:</string>
    <string name="currency_field">Currency:</string>
    <string name="currencies_dropdown">Currencies Dropdown</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="reset_changes">Reset Changes</string>
    <string-array name="currencies">
        <item>ARS</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>JPY</item>
        <item>USD</item>
    </string-array>

    <!-- Add Transaction Strings -->
    <string name="value_field">Value:</string>
    <string name="value_hint">Transaction Value</string>
    <string name="date_field">Date:</string>
    <string name="select_sign">Select sign</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="minus_sign" translatable="false">-</string>
    <string-array name="transaction_sign">
        <item>+</item>
        <item>-</item>
    </string-array>
    <string name="dialog_value" translatable="false">value</string>
    <string name="confirm_dialog">Do you wish to create\nan %s of:</string>
    <string name="addition">addition</string>
    <string name="expense">expense</string>
    <string name="confirm_amount">%s?</string>
    <string name="confirm_yes">Confirm Transaction</string>
    <string name="confirm_no">Go Back</string>

    <!-- Monitor Transaction Strings -->
    <string name="monitor">Transaction</string>
    <string name="transaction" translatable="false">transaction</string>
    <string name="created_at">Created at:</string>
    <string name="edit">Edit Transaction</string>
    <string name="delete">Delete Transaction</string>

    <!-- Edit Transaction Strings -->
    <string name="edit_transaction">Edit Transaction</string>
    <string name="confirm_edit">Confirm Edition</string>

    <!-- Delete Transaction Strings -->
    <string name="delete_dialog">Are you sure you want to\ndelete this transaction of:</string>

</resources>